--- a/viewer.html
+++ b/viewer.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <model-viewer
-    src="https://armanburger.github.io/ThomasDayLeg/"
+    src="4_1_2025.glb"
     alt="Thomas Day"
     auto-rotate
     camera-controls
